<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".docScreen">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:background="@drawable/back_button_background"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:scaleType="center"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#ffffff"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        app:layout_constraintVertical_bias="0.055">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="102dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/namee"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/emailid"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/GENDER"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/practicemonth"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/practiceyear"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/docterid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:text="@string/docter_id"
                android:textColor="#282425"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/please_check_your_information"
        android:textColor="#282425"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.145" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forward_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#ffffff"
        android:elevation="20dp"
        android:text="@string/lets_move_forward"
        android:textColor="#292425"
        android:textSize="15sp"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.872" />


</androidx.constraintlayout.widget.ConstraintLayout>